--- a/roles/plex/tasks/main.yml
+++ b/roles/plex/tasks/main.yml
@@ -44,7 +44,7 @@
           homepage.group: Media
           homepage.name: Plex
           homepage.icon: plex.png
-          homepage.href: "http://{{ ansible_nas_hostname }}:32400"
+          homepage.href: "https://{{ plex_hostname }}.{{ ansible_nas_domain }}"
           homepage.widget.type: tautulli
           homepage.widget.url: "http://{{ ansible_nas_hostname }}:{{ tautulli_port }}"
           homepage.widget.key: "{{ tautulli_api_key }}"
