--- a/roles/code-server/tasks/main.yml
+++ b/roles/code-server/tasks/main.yml
@@ -28,7 +28,7 @@
           homepage.group: Applications
           homepage.name: Code Server
           homepage.icon: code-server
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ code_server_port }}"
+          homepage.href: "https://{{ code_server_hostname }}.{{ ansible_nas_domain }}"
           homepage.description : "VS Code in the browser"
   when: code_server_enabled is true
 
