--- a/roles/duplicacy/tasks/main.yml
+++ b/roles/duplicacy/tasks/main.yml
@@ -43,7 +43,7 @@
           homepage.group: Applications
           homepage.name: Duplicacy
           homepage.icon: duplicacy
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ duplicacy_port }}"
+          homepage.href: "https://{{ duplicacy_hostname }}.{{ ansible_nas_domain }}"
           homepage.description : "A new generation cross-platform cloud backup tool"
         network_mode: host
   when: duplicacy_enabled is true
