--- a/roles/handbrake/tasks/main.yml
+++ b/roles/handbrake/tasks/main.yml
@@ -34,7 +34,7 @@
           homepage.group: Applications
           homepage.name: Handbrake
           homepage.icon: handbrake
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ handbrake_port }}"
+          homepage.href: "https://{{ handbrake_hostname }}.{{ ansible_nas_domain }}"
           homepage.description : "Cconverting video"
   when: handbrake_enabled is true
 
