--- a/roles/netalertx/tasks/main.yml
+++ b/roles/netalertx/tasks/main.yml
@@ -47,7 +47,7 @@
           homepage.group: Monitoring
           homepage.name: NetAlertX
           homepage.icon: netalertx.png
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ netalertx_port }}"
+          homepage.href: "https://{{ netalertx_hostname }}.{{ ansible_nas_domain }}"
           homepage.description: Network device monitoring and alerting
   when: netalertx_enabled is true
 
