--- a/roles/ollama/tasks/main.yml
+++ b/roles/ollama/tasks/main.yml
@@ -45,7 +45,7 @@
           homepage.group: Applications
           homepage.name: Ollama
           homepage.icon: ollama
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ ollama_webui_port }}"
+          homepage.href: "https://{{ ollama_hostname }}.{{ ansible_nas_domain }}"
           homepage.description: Large language models
   when: ollama_enabled is true
 
