--- a/roles/immich/defaults/main.yml
+++ b/roles/immich/defaults/main.yml
@@ -30,9 +30,9 @@ immich_machinelearning_container_name: "immich_machine_learning"
 immich_power_tools_container_name: "immich_power_tools"
 
 immich_postgres_image: "ghcr.io/immich-app/postgres"
-immich_postgres_tag: "14-vectorchord0.4.3-pgvectors0.2.0"
+immich_postgres_tag: "14-vectorchord0.4.3-pgvectors0.2.0@sha256:bcf63357191b76a916ae5eb93464d65c07511da41e3bf7a8416db519b40b1c23"
 immich_redis_image: "docker.io/valkey/valkey"
-immich_redis_tag: "8-bookworm@sha256:fec42f399876eb6faf9e008570597741c87ff7662a54185593e74b09ce83d177"
+immich_redis_tag: "9@sha256:546304417feac0874c3dd576e0952c6bb8f06bb4093ea0c9ca303c73cf458f63"
 immich_server_image: "ghcr.io/immich-app/immich-server"
 immich_server_tag: "{{ immich_version }}"
 immich_microservices_image: "ghcr.io/immich-app/immich-server"
