--- a/roles/trafficstats/tasks/main.yml
+++ b/roles/trafficstats/tasks/main.yml
@@ -36,7 +36,7 @@
           homepage.group: Home
           homepage.name: TrafficStats
           homepage.icon: mdi-car-multiple
-          homepage.href: "http://{{ ansible_nas_hostname }}:{{ trafficstats_port }}"
+          homepage.href: "https://{{ trafficstats_hostname }}.{{ ansible_nas_domain }}"
           homepage.description: "Vehicle traffic counter via Dahua IVS"
   when: trafficstats_enabled is true
 
