Add city configuration option for TrafficStats role

--- a/roles/trafficstats/tasks/main.yml
+++ b/roles/trafficstats/tasks/main.yml
@@ -24,6 +24,7 @@
           DAHUA_USER: "{{ trafficstats_dahua_user }}"
           DAHUA_PASS: "{{ trafficstats_dahua_pass }}"
           DAHUA_EVENTS: "{{ trafficstats_dahua_events }}"
+          CITY: "{{ trafficstats_city }}"
         restart_policy: unless-stopped
         memory: "{{ trafficstats_memory }}"
         labels:
