--- a/roles/trafficstats/defaults/main.yml
+++ b/roles/trafficstats/defaults/main.yml
@@ -23,3 +23,8 @@ trafficstats_dahua_port: "80"
 trafficstats_dahua_user: "admin"
 trafficstats_dahua_pass: "admin"
 trafficstats_dahua_events: "CrossLineDetection"
+
+# Optional: city name for sunrise/sunset (lat, lon and timezone looked up automatically).
+# When set, events are only recorded between sunrise and sunset at that location.
+# Example: "Helsinki", "London, UK". Leave empty to record 24/7.
+trafficstats_city: ""
