--- a/roles/ollama/tasks/main.yml
+++ b/roles/ollama/tasks/main.yml
@@ -42,6 +42,12 @@
         restart_policy: unless-stopped
         memory: "{{ ollama_webui_memory }}"
         labels:
+          traefik.enable: "{{ ollama_available_externally | string }}"
+          traefik.http.routers.ollama_webui.rule: "Host(`{{ ollama_hostname }}.{{ ansible_nas_domain }}`)"
+          traefik.http.routers.ollama_webui.tls.certresolver: "letsencrypt"
+          traefik.http.routers.ollama_webui.tls.domains[0].main: "{{ ansible_nas_domain }}"
+          traefik.http.routers.ollama_webui.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
+          traefik.http.services.ollama_webui.loadbalancer.server.port: "8080"
           homepage.group: Applications
           homepage.name: Ollama
           homepage.icon: ollama
