--- a/roles/graylog/tasks/main.yml
+++ b/roles/graylog/tasks/main.yml
@@ -5,91 +5,76 @@
       ansible.builtin.file:
         path: "{{ item }}"
         state: directory
-        owner: "1100"
-        group: "1100"
-        mode: 0750
+        mode: "0750"
       with_items:
-        - "{{ graylog_data_directory }}/data"
-        - "{{ graylog_data_directory }}/plugins"
-        - "{{ graylog_data_directory }}/journal"
+        - "{{ graylog_data_directory }}"
+        - "{{ graylog_data_directory }}/mongodb"
+        - "{{ graylog_data_directory }}/mongodb/data"
+        - "{{ graylog_data_directory }}/mongodb/configdb"
+        - "{{ graylog_data_directory }}/datanode"
+        - "{{ graylog_data_directory }}/graylog"
 
-    - name: Create Elasticsearch Directories
-      ansible.builtin.file:
-        path: "{{ item }}"
-        state: directory
-        owner: "1000"
-        group: "1000"
-        mode: 0750
-      with_items:
-        - "{{ graylog_data_directory }}/elastic"
-
-    - name: Create Mongodb Directories
-      ansible.builtin.file:
-        path: "{{ item }}"
-        state: directory
-        owner: "999"
-        group: "1099900"
-        mode: 0750
-      with_items:
-        - "{{ graylog_data_directory }}/db"
-
-    - name: Create graylog Network
+    - name: Create Graylog Network
       community.docker.docker_network:
         name: "{{ graylog_network_name }}"
 
-    - name: Create MongoDB container
+    - name: Create Graylog MongoDB Container
       community.docker.docker_container:
         container_default_behavior: no_defaults
         name: "{{ graylog_mongodb_container_name }}"
         image: "{{ graylog_mongodb_image_name }}:{{ graylog_mongodb_image_version }}"
+        pull: true
         networks:
           - name: "{{ graylog_network_name }}"
-        pull: true
         volumes:
-          - "{{ graylog_data_directory }}/db:/data/db:rw"
+          - "{{ graylog_data_directory }}/mongodb/data:/data/db:rw"
+          - "{{ graylog_data_directory }}/mongodb/configdb:/data/configdb:rw"
+        restart_policy: unless-stopped
+        memory: "{{ graylog_mongodb_memory }}"
         labels:
           traefik.enable: "false"
-        restart_policy: unless-stopped
 
-    - name: Create Elasticsearch container
+    - name: Create Graylog DataNode Container
       community.docker.docker_container:
         container_default_behavior: no_defaults
-        name: "{{ graylog_elasticsearch_container_name }}"
-        image: "{{ graylog_elasticsearch_image_name }}:{{ graylog_elasticsearch_image_version }}"
+        name: "{{ graylog_datanode_container_name }}"
+        hostname: "datanode"
+        image: "{{ graylog_datanode_image_name }}:{{ graylog_datanode_image_version }}"
         pull: true
         networks:
           - name: "{{ graylog_network_name }}"
         volumes:
-          - "{{ graylog_data_directory }}/elastic:/var/lib/elasticsearch/data:rw"
+          - "{{ graylog_data_directory }}/datanode:/var/lib/graylog-datanode:rw"
         env:
-          http.host: "0.0.0.0"
-          transport.host: "localhost"
-          network.host: "0.0.0.0"
-          ES_JAVA_OPTS: "-Dlog4j2.formatMsgNoLookups=true -Xms512m -Xmx512m"
+          GRAYLOG_DATANODE_NODE_ID_FILE: "/var/lib/graylog-datanode/node-id"
+          GRAYLOG_DATANODE_PASSWORD_SECRET: "{{ graylog_password_secret }}"
+          GRAYLOG_DATANODE_MONGODB_URI: "mongodb://{{ graylog_mongodb_container_name }}:27017/graylog"
+        ulimits:
+          - "memlock:-1:-1"
+          - "nofile:65536:65536"
         restart_policy: unless-stopped
-        memory: 1g
+        memory: "{{ graylog_datanode_memory }}"
         labels:
           traefik.enable: "false"
 
-    - name: Create Graylog Docker Container
+    - name: Create Graylog Server Container
       community.docker.docker_container:
         container_default_behavior: no_defaults
         name: "{{ graylog_container_name }}"
+        hostname: "server"
         image: "{{ graylog_image_name }}:{{ graylog_image_version }}"
         pull: true
-        volumes:
-          - graylog_data:/usr/share/graylog/data:rw
-          - graylog_journal:/usr/share/graylog/data/journal
         ports: "{{ graylog_ports }}"
         networks:
           - name: "{{ graylog_network_name }}"
+        volumes:
+          - "{{ graylog_data_directory }}/graylog:/usr/share/graylog/data:rw"
         env:
+          GRAYLOG_NODE_ID_FILE: "/usr/share/graylog/data/data/node-id"
           GRAYLOG_PASSWORD_SECRET: "{{ graylog_password_secret }}"
-          # Password: admin
           GRAYLOG_ROOT_PASSWORD_SHA2: "{{ graylog_root_password_sha2 }}"
+          GRAYLOG_HTTP_BIND_ADDRESS: "0.0.0.0:9000"
           GRAYLOG_HTTP_EXTERNAL_URI: "{{ graylog_http_external_uri }}"
-          GRAYLOG_HTTP_PUBLISH_URI: "{{ graylog_http_publish_uri }}"
-          GRAYLOG_ELASTICSEARCH_HOSTS: "http://{{ graylog_elasticsearch_container_name }}:9200"
           GRAYLOG_MONGODB_URI: "mongodb://{{ graylog_mongodb_container_name }}:27017/graylog"
           GRAYLOG_TRANSPORT_EMAIL_ENABLED: "{{ graylog_email_enabled }}"
           GRAYLOG_TRANSPORT_EMAIL_HOSTNAME: "{{ graylog_email_hostname }}"
@@ -103,8 +88,7 @@
           GRAYLOG_TRANSPORT_EMAIL_FROM_EMAIL: "{{ graylog_email_from_email }}"
           GRAYLOG_ROOT_TIMEZONE: "{{ ansible_nas_timezone }}"
           TZ: "{{ ansible_nas_timezone }}"
-        entrypoint: ["/usr/bin/tini", "--", "wait-for-it", "{{ graylog_elasticsearch_container_name }}:9200", "--", "/docker-entrypoint.sh"]
-        # entrypoint: "/usr/bin/tini -- wait-for-it {{ graylog_elasticsearch_container_name }}:9200 --  /docker-entrypoint.sh"
+        entrypoint: "/usr/bin/tini -- /docker-entrypoint.sh"
         restart_policy: unless-stopped
         memory: "{{ graylog_memory }}"
         labels:
@@ -113,23 +97,33 @@
           traefik.http.routers.graylog.tls.certresolver: "letsencrypt"
           traefik.http.routers.graylog.tls.domains[0].main: "{{ ansible_nas_domain }}"
           traefik.http.routers.graylog.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
-          traefik.http.services.graylog.loadbalancer.server.port: "2368"
+          traefik.http.services.graylog.loadbalancer.server.port: "9000"
+          homepage.group: Monitoring
+          homepage.name: Graylog
+          homepage.icon: graylog.png
+          homepage.href: "https://{{ graylog_hostname }}.{{ ansible_nas_domain }}"
+          homepage.description: Log management and analysis
   when: graylog_enabled is true
 
 - name: Stop Graylog
   block:
-    - name: Stop Graylog Mongodb
+    - name: Stop Graylog Server
+      community.docker.docker_container:
+        name: "{{ graylog_container_name }}"
+        state: absent
+
+    - name: Stop Graylog DataNode
+      community.docker.docker_container:
+        name: "{{ graylog_datanode_container_name }}"
+        state: absent
+
+    - name: Stop Graylog MongoDB
       community.docker.docker_container:
         name: "{{ graylog_mongodb_container_name }}"
         state: absent
 
-    - name: Stop Graylog Elastic Search
-      community.docker.docker_container:
-        name: "{{ graylog_elasticsearch_container_name }}"
-        state: absent
-
-    - name: Stop Graylog
-      community.docker.docker_container:
-        name: "{{ graylog_container_name }}"
+    - name: Delete Graylog Network
+      community.docker.docker_network:
+        name: "{{ graylog_network_name }}"
         state: absent
   when: graylog_enabled is false
